--- a/AuD.tex
+++ b/AuD.tex
@@ -5,6 +5,74 @@
 \usepackage{multirow}
 \usepackage{latexnew}
 
+ %UPDATE WITHOUT CLASS CHANGE
+% ----------------------------------------------------------------------
+
+% LastPage
+\usepackage{lastpage}
+
+% Allow hyperlinks
+	\RequirePackage[pagebackref=true,pdfpagelabels]{hyperref}
+
+% Colors
+	\RequirePackage{latex4ei/latex4ei_colors}
+	\colorlet{col_link}{tum_blue_dark}
+	\hypersetup{
+	colorlinks=true,
+	linkcolor=col_link,
+	urlcolor=col_link,
+	citecolor=col_link,
+}
+
+% set pdfoptions
+	\AtBeginDocument{
+		\hypersetup{
+			pdftitle={Analysis 1},
+	        pdfauthor={Lukas Kompatscher},
+	        pdfcreator={LaTeX4EI template (www.latex4ei.de)},
+	        pdfkeywords={latex4ei}
+	    }
+	}
+
+% Date with git commit number
+	\newcommand{\themydate}{\today} % Default URL placeholder
+	\newcommand{\mydate}[1]{\renewcommand{\themydate}{#1}}	
+
+% Header and Footer
+	\RequirePackage{fancyhdr}
+
+	\pagestyle{fancy}
+	\fancyhf{}
+
+	\AtBeginDocument{
+	\IfFileExists{git.id}{\input{git.id}}{}
+	\ifdefined\GitNiceDate\mydate{\GitNiceDate\ (git \GitRevision)}\fi
+	\ifdefined\GitIssuesURL
+		\ifdefined\setissueslinkurl
+		\setissueslinkurl{\GitIssuesURL} % Set the actual URL
+		\fi
+	\fi
+	}
+
+% Define Email
+	\providecommand{\email}[1]{\href{mailto:#1}{\nolinkurl{#1}}}
+
+%
+	\fancyfoot[C]{von Lukas Kompatscher\ -- Mail: \email{lukas.kompatscher@tum.de}}
+	\fancyfoot[R]{Stand: \themydate \qquad \thepage/\pageref{LastPage}}
+	\fancyfoot[L]{Homepage: \url{www.latex4ei.de} -- Fehler bitte \emph{sofort} \href{\issueslinkurl}{melden}.}
+
+	\renewcommand{\headrulewidth}{0.0pt} %obere Linie ausblenden
+	\renewcommand{\footrulewidth}{0.1pt} %obere Linie ausblenden
+
+	\newcommand{\issueslinkurl}{https://github.com/latex4ei/Allgemein/issues} % Default URL placeholder
+	\newcommand{\setissueslinkurl}[1]{\renewcommand{\issueslinkurl}{#1}}
+	
+\titleformat{\subsubsection}
+  {\normalfont\normalsize\bfseries}{\thesubsubsection}{1em}{}
+
+% ----------------------------------------------------------------------
+
 \renewcommand{\t}{\texttt}
 \newcommand{\f}{{\bfseries}}
 
@@ -101,7 +169,7 @@ Rekursive Rückführung eines zu lösenden Problems auf mehrere identische Probl
 Schrittweise Erweiterung der Lösung ausgehend von Startlösung unter Berücksichtigung des bestmöglichsten Schrittes\\
 \textbf{Beispiele:} Berechnung Wechselgeld, Glasfasernetz
 \subsubsection{Brute Force}
-Erzeuge alle in Frage kommenden Kandidaten und suche besten aus\\
+Erzeuge alle in Frage kommenden Kandidaten und suche besten aus
 \subsubsection{Backtracing}
 Systematische Suchtechnik, um Lösungsraum vollständig abzuarbeiten\\
 \textbf{Beispiele:} Labyrinth (mit frühem Abbrechen von falschen Lösungspfaden)
@@ -492,7 +560,7 @@ Bei ungerichtetem Graph symmetrisch, sinnvoll wenn Graph fast vollständig\\
 
 \textbf{Ungerichteter Graph:} Richtung der Kante spielt keine Rolle\\
 \textbf{Gerichteter Graph:} Richtung der Kante spielt eine Rolle, Schleifen möglich $(u, u)$ mit $u \in V$\\
-\textbf{DAG:} Directed acyclic graph.\\
+\textbf{DAG:} Directed acyclic graph.
 
 \subsection{Eigenschaften}
 $v$ \textbf{adjazent} zu $u$: $(u,v) \in E$ bzw. $\{u, v\} \in E$ für $u, v \in V$\\
@@ -501,7 +569,7 @@ $v$ \textbf{adjazent} zu $u$: $(u,v) \in E$ bzw. $\{u, v\} \in E$ für $u, v \in
 Pfad: Folge von miteinander verbundenen Knoten\\
 einfacher Pfad: alle Knoten sind paarweise verschieden\\
 Zyklus: Pfad mit gleichem Anfangs- sowie Endknoten\\
-Kreis: einfacher Pfad mit gleichem Anfangs- sowie Endknoten\\
+Kreis: einfacher Pfad mit gleichem Anfangs- sowie Endknoten
 
 \subsubsection{Gerichteter Graph}
 Anzahl der eintretenden Kanten in $v$ heißt Eingangsgrad: $indeg(v)$\\
@@ -611,7 +679,7 @@ zusammenhängend: jeder Knoten ist von jedem anderen Knoten erreichbar\\
 	10. \quad	for \{u,w\} $\in$ V $\times$ V\\
 	11. \quad \quad	if (d[u,w] $>$ d[u,v] + d[v,w])\\
 	12.	\quad \quad \quad	d(u,w) = d(u,v) + d(v,w);\\
-	13. \quad \quad \quad	pred(u,w) = pred(v,w);\\
+	13. \quad \quad \quad	pred(u,w) = pred(v,w);
 	}}
 
 \subsection{Bäume}
@@ -665,7 +733,7 @@ Nach rechts: Umkehrung der Rotation nach links\\
 11\ \quad else\\
 12\ \qquad   v->left = LeftRotate(v->left)\\
 13\ \qquad   v = RightRotate(v) // Doppelrotation\\
-14\ return v\\
+14\ return v
 }
 
 \subsubsection{Traversierung}
