--- a/AuD.tex
+++ b/AuD.tex
@@ -27,8 +27,8 @@
 % set pdfoptions
 	\AtBeginDocument{
 		\hypersetup{
-			pdftitle={Analysis 1},
-	        pdfauthor={Lukas Kompatscher},
+			pdftitle={Algorithmen und Datenstrukturen},
+	        pdfauthor={LaTeX4Ei},
 	        pdfcreator={LaTeX4EI template (www.latex4ei.de)},
 	        pdfkeywords={latex4ei}
 	    }
@@ -58,7 +58,7 @@
 	\providecommand{\email}[1]{\href{mailto:#1}{\nolinkurl{#1}}}
 
 %
-	\fancyfoot[C]{von Lukas Kompatscher\ -- Mail: \email{lukas.kompatscher@tum.de}}
+	\fancyfoot[C]{von LaTeX4Ei\ -- Mail: \email{info@latex4ei.de}}
 	\fancyfoot[R]{Stand: \themydate \qquad \thepage/\pageref{LastPage}}
 	\fancyfoot[L]{Homepage: \url{www.latex4ei.de} -- Fehler bitte \emph{sofort} \href{\issueslinkurl}{melden}.}
 
