fix typo in 3.4

--- a/AuD.tex
+++ b/AuD.tex
@@ -419,7 +419,7 @@ Verhalten sich wie Pointer.\\ \\
 \t{list.begin()}& Startiterator (Durchlauf von vorne)\\
 \t{list.end()}& Enditerator (Durchlauf von vorne)\\
 \t{list.rbegin()}& Startiterator (Durchlauf von hinten)\\
-\t{list.rbegin()}& Enditerator (Durchlauf von hinten)\\
+\t{list.rend()}& Enditerator (Durchlauf von hinten)\\
 \t{++it}& Nächstes Element\\
 \t{*it}& Aktuellen Wert ausgeben\\
 \end{tabular}
