--- a/AuD.tex
+++ b/AuD.tex
@@ -826,7 +826,7 @@ Danach die Heapeigenschaft wiederherstellen mit:
 
 \section{Hashing}
 \subsection{Offene Adressierung}
-	Hashtabellen sind Felder bei denen die Position eines Objekts durch eine Hashfunktion berechnet wird. Da es zu Kollisionen kommen kann, werden in den Feldern nur Verweise auf eine Liste gespeichert.
+	Hashtabellen sind Felder bei denen die Position eines Objekts durch eine Hashfunktion berechnet wird.
 
 	Schlüssel: wird von einem Schlüsselgenerator aus den Daten generiert. \\
 	\textbf{Vorteile:} Cache effizient, keine Zeiger, geringer Speicherverbrauch \\
